// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family B — npm-global > B1 — npm-g dash-only (⚠ captures current Windows bug) > pi unresolved on darwin 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family B — npm-global > B1 — npm-g dash-only (⚠ captures current Windows bug) > pi unresolved on linux 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        not found on PATH"
`;

exports[`Family B — npm-global > B1 — npm-g dash-only (⚠ captures current Windows bug) > pi unresolved on win32 1`] = `
"name:   pi
ok:     false
source: —
path:   —
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
  npm-global   missing: <NPM_ROOT>/@oh-my-pi/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi.cmd
  where        not found on PATH"
`;

exports[`Family B — npm-global > B2 — npm-g full (pi + openspec via global npm) > pi resolves via npm-global on darwin 1`] = `
"name:   pi
ok:     true
source: system
path:   /usr/local/bin/pi
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        ok"
`;

exports[`Family B — npm-global > B2 — npm-g full (pi + openspec via global npm) > pi resolves via npm-global on linux 1`] = `
"name:   pi
ok:     true
source: system
path:   /usr/local/bin/pi
tried:
  override     no override set
  managed      missing: <HOME>/.pi-dashboard/node_modules/.bin/pi
  where        ok"
`;

exports[`Family B — npm-global > B2 — npm-g full (pi + openspec via global npm) > pi resolves via npm-global on win32 (with node.exe toArgv) 1`] = `
"name:   pi
ok:     true
source: npm-global
path:   <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      missing: <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
  managed      missing: <HOME>/.pi-dashboard/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js
  npm-global   ok
argv:
  - C:/Program Files/nodejs/node.exe
  - <NPM_ROOT>/@mariozechner/pi-coding-agent/dist/cli.js"
`;

exports[`Family B — npm-global > B3 — npm-g pi-installed-first (bridge needs registration) > settings.json present but lacks bridge entry (linux) 1`] = `
"settings-delta:
  added:
    (none)
  removed:
    (none)
  preserved:
    (none)"
`;
